--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@vueuse/core": "^14.0.0",
     "eslint": "^9.39.1",
+    "motion-v": "^1.7.4",
     "nuxt": "^4.2.1",
     "vite": "^7.2.4",
     "vue": "^3.5.25",
@@ -25,8 +27,11 @@
     "@nuxt/icon": "2.1.0",
     "@nuxt/image": "2.0.0",
     "@nuxtjs/i18n": "10.2.1",
-    "@nuxtjs/tailwindcss": "6.14.0",
+    "@nuxtjs/sitemap": "^7.4.7",
+    "@tailwindcss/vite": "^4.1.17",
+    "nuxt-schema-org": "^5.0.9",
     "nuxt-seo-utils": "7.0.18",
-    "nuxt-vitalizer": "2.0.0"
+    "nuxt-vitalizer": "2.0.0",
+    "tailwindcss": "^4.1.17"
   }
 }
