--- a/package.json
+++ b/package.json
@@ -7,18 +7,28 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "screenshots": "node scripts/screenshot-projects.js",
+    "upload": "node scripts/upload-screenshots.js"
   },
   "dependencies": {
     "@vueuse/core": "^14.0.0",
+    "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.8.0",
+    "clsx": "^2.1.1",
     "eslint": "^9.39.1",
+    "lucide-vue-next": "^0.562.0",
     "motion-v": "^1.7.4",
     "nuxt": "^4.2.1",
+    "tailwind-merge": "^3.4.0",
     "vite": "^7.2.4",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
+    "@iconify-json/logos": "^1.2.10",
+    "@iconify-json/ph": "^1.2.2",
+    "@iconify-json/simple-icons": "^1.2.65",
     "@nuxt/content": "3.8.2",
     "@nuxt/devtools": "3.1.0",
     "@nuxt/eslint": "1.10.0",
@@ -32,6 +42,8 @@
     "nuxt-schema-org": "^5.0.9",
     "nuxt-seo-utils": "7.0.18",
     "nuxt-vitalizer": "2.0.0",
-    "tailwindcss": "^4.1.17"
+    "playwright": "^1.57.0",
+    "tailwindcss": "^4.1.17",
+    "tw-animate-css": "^1.4.0"
   }
 }
