--- a/projects-data.es.json
+++ b/projects-data.es.json
@@ -8,7 +8,7 @@
   },
   {
     "name": "Nexon Store",
-    "link": "https://nexon-storefront.vercel.app",
+    "link": "https://nexonfarm-hu.exera.dev/",
     "image": "https://res.cloudinary.com/dwxc8s4mq/image/upload/w_1200,h_800,c_limit,q_auto,f_auto/v1748459523/portfolio/nexonproject_a4gdm0.png",
     "technologies": [
       "int",
